Теперь настраивается конфигурация для контекстного кода
